Added configuration and index and store users handler
